--- a/xgds_video/attic/test.html
+++ b/xgds_video/attic/test.html
@@ -9,8 +9,8 @@
         </script>
           <script type="text/javascript" src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js"></script>
           <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery.tagsinput/dist/jquery.tagsinput.min.css"></link>
-          <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.min.css" ></link>
-          <script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
+          <link rel="stylesheet" type="text/css" href="{{ EXTERNAL_URL }}jquery-ui/themes/base/jquery-ui.css" ></link>
+          <script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.js"></script>
         <title>Multiple 2</title>
     </head>
 
